# semantic_inference_ros

./: .gitignore  .gitmodules  LICENSE  README.md
semantic_inference/: CMakeLists.txt
semantic_inference/config/: anymal.csv  distinct_150_colors.csv
semantic_inference/config/label_groupings/: 3rscan.yaml  ade20k_full.yaml  anymal.yaml
semantic_inference/include/semantic_inference/: image_recolor.h  panoptic_extractor.h  segmenter.h
semantic_inference/src/: image_recolor.cpp  model.cpp  panoptic_extractor.cpp  segmenter.cpp  trt_utilities.cpp
semantic_inference_msgs/: CMakeLists.txt  package.xml
semantic_inference_msgs/msg/: FeatureImage.msg  FeatureVector.msg  FeatureVectorsStamped.msg  LevelFeatureVectorStamped.msg  NavigationPromptsEmbeddings.msg  ObjectsPromptPair.msg  VlmForNavigationDebug.msg  VlmForNavigationOutput.msg  VlmForNavigationRelationshipOutput.msg
semantic_inference_msgs/srv/: EncodeFeature.srv  NavigationPrompt.srv
semantic_inference_python/: CMakeLists.txt  package.xml  requirements.txt  setup.py
semantic_inference_python/config/system_prompts/: examples.txt  gpt_system_prompt.txt  llm_response_parser_prompt.txt
semantic_inference_python/scripts/: add_name_to_colorspace.py  export_blip_generate.py  export_blip_visual.py  export_clip.py  export_deepseek_visual.py  export_yolo.py  extract_deepseek_visual.py
semantic_inference_python/src/semantic_inference_python/: __init__.py  config.py
semantic_inference_python/src/semantic_inference_python/client/: __init__.py  config.py  fast_api_client.py  openai_client.py
semantic_inference_python/src/semantic_inference_python/commands/: color.py
semantic_inference_python/src/semantic_inference_python/models/: __init__.py  clip_feature_extractor.py  instruct_blip.py  openset_segmenter.py  patch_extractor.py  segment_refinement.py  vlm_feature_extractor.py  vlm_for_navigation.py  wrappers.py
semantic_inference_ros/: CMakeLists.txt  nodelet_plugins.xml  package.xml
semantic_inference_ros/app/: clip_features_node  clip_publisher_node  dummy_vlm_node  encode_vlm_labels_node  language_embedding_node  make_rosbag  navigation_prompt_service  openset_segmentation_node  vlm_features_node  vlm_for_navigation_node
semantic_inference_ros/cfg/: VLMForNavigation.cfg
semantic_inference_ros/config/: navigation_prompt_parser.yaml  openset_segmentation.yaml  vlm.yaml  vlm_for_navigation.yaml  vlm_prompting.yaml
semantic_inference_ros/include/semantic_inference_ros/: output_publisher.h
semantic_inference_ros/launch/: navigation_prompt_parser.launch  openset_segmentation.launch  semantic_inference.launch  vlm_features.launch  vlm_for_navigation.launch  vlm_text_generator.launch
semantic_inference_ros/src/: output_publisher.cpp  recolor_nodelet.cpp  republish_nodelet.cpp  rgbd_segmentation_nodelet.cpp  segmentation_nodelet.cpp
semantic_inference_ros/src/semantic_inference_ros/: __init__.py  image_worker.py  navigation_prompt_service.py  prompt_encoder.py  recolor.py  ros_config.py  ros_conversions.py  ros_logging.py  subscriber_worker.py  sync_images_worker.py  vlm_text_generator.py
