<?xml version="1.0"?>
<package format="2">
  <name>semantic_inference_ros</name>
  <version>0.0.1</version>
  <description>ROS interface for semantic segmentation and reasoning</description>

  <author email="na26933@mit.edu">Nathan Hughes</author>
  <author email="albert.g.puigjaner@ntnu.no">Albert Gassol Puigjaner</author>
  <maintainer email="albert.g.puigjaner@ntnu.no">Albert Gassol Puigjaner</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>semantic_inference</depend>
  <depend>semantic_inference_python</depend>
  <depend>semantic_inference_msgs</depend>

  <export>
      <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>
</package>
